--- a/Project/app/src/main/res/menu/book_list_menu.xml
+++ b/Project/app/src/main/res/menu/book_list_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/delete_book"
+    <item
+        android:id="@+id/delete_book"
         android:icon="@android:drawable/ic_menu_add"
-        android:title="@string/delete_book"/>
+        android:title="@string/delete_book" />
 </menu>
