--- a/app/src/main/res/layout/bookmark_list_row_layout.xml
+++ b/app/src/main/res/layout/bookmark_list_row_layout.xml
@@ -30,9 +30,9 @@
 
         <TextView
             android:id="@+id/page"
-            android:text="@string/bookmark_page"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="@string/bookmark_page" />
 
     </LinearLayout>
 
